# sigmaratings-challenge

./: .gitignore  README.md  Sigma Data Coding Challenge.txt  pyproject.toml
sigma/: part1.sql  part2_anagram.py  part3_getnonascii.py  part4_count_transformations.py  part5_pyspark.md
tests/: test_anagram.py  test_count_transformations.py
