[tool.poetry]
name = "sigmaratings-challenge"
version = "0.1.0"
description = ""
authors = ["baroncurtin2 <knowledge3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
pyspark = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
